# Finanalyze

./: .flake8  .gitignore  README.md  pyproject.toml
data/: Statement_18.12.2023-18.12.2024.XLSX
src/: logging_config.py  reports.py  services.py  views.py
tests/: test_reports.py  test_services.py  test_views.py
