[tool.poetry]
name = "finanalyze"
version = "0.1.0"
description = ""
authors = ["Artemi Bogatov <aboga99@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
mypy = "^1.5.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | build
    | dist
    | venv
    | \.tox
    | \.nox
    | \.eggs
    | \.egg-info
)/'''

[tool.isort]
profile = "black"
line_length = 119
skip = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv"
]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '''
/(
    venv
)/
'''
